bunch of spacing and alignment fixes

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,3 +6,12 @@
 section#contact {
   height: 90vh;
 }
+
+i + div {
+  display: inline-block;
+}
+
+.col-lg-9 div {
+  display: inline-block;
+  white-space: nowrap;
+}
